Add sender argument to getErrorMessage() for message rendering